--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
 
+/* ID and Class */
+.dsmeta-container {
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+#sales {
+  padding: 40px 10px;
+}
+
+/* HTML tags */
 * {
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
